--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8"/>
-    <title>Spring Framework Guru Courses</title>
+    <title th:text="#{index.page.title}">Spring Framework Guru Courses</title>
     <link th:href="@{/css/bootstrap-3.3.7-dist/css/bootstrap.min.css}"
           href="../static/css/bootstrap-3.3.7-dist/css/bootstrap.min.css"
           rel="stylesheet"
@@ -131,25 +131,49 @@
     </style>
 </head>
 <body>
-<div class="jumbotron">
+<div class="jumbotron" th:replace="fragments/jumbotron :: jumbotron">
     <div class="container">
         <h1>Spring Framework Guru</h1>
-        <p class="lead">Online Courses for Spring Framework</p>
+        <p class="lead" th:text="#{index.courses.tagline}">Tag line</p>
     </div>
 </div>
 
 <div class="container">
     <div class="row">
         <div class="col-md-12">
-            <h1>Spring Framework Guru Courses</h1>
+            <h1 th:text="#{index.courses.headline}">Courses Headline</h1>
         </div>
     </div>
 
     <div class="row course-list list">
+        <div class="row course-list list">
+            <div th:each="product, it : ${products}">
+                <div th:if="${(it.count gt 0 and it.count lt 4)}">
+                    <div th:replace="fragments/productdiv :: productdiv">
+
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="row course-list list">
+        <div class="row course-list list">
+            <div th:each="product, it : ${products}">
+                <div th:if="${(it.count gt 3 and it.count lt 7)}">
+                    <div th:replace="fragments/productdiv :: productdiv">
+
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="row course-list list" th:remove="all">
         <div class="col-md-4">
             <div class="course-listing">
                 <div class="row">
-                    <a href="/sfg-thymeleaf-course/templates/product.html">
+                    <a href="/product/1">
                         <div class="col-lg-12">
                             <div class="course-box-image-container">
                                 <img role="presentation"
@@ -262,7 +286,7 @@
         </div>
     </div>
 
-    <div class="row">
+    <div class="row course-list list" th:remove="all">
         <div class="col-md-4">
             <div class="course-listing">
                 <div class="row">
@@ -378,5 +402,7 @@
     </div>
 </div>
 
+
+<div th:replace="fragments/footer :: footer">footer</div>
 </body>
 </html>
