--- a/src/main/resources/templates/product.html
+++ b/src/main/resources/templates/product.html
@@ -11,7 +11,7 @@
             th:src="@{/js/jquery3.6.0.min.js}"
             src="../static/js/jquery3.6.0.min.js"></script>
 
-    <link th:href="@{css/custom.css}" rel="stylesheet" media="screen"/>
+    <link th:href="@{/css/custom.css}" rel="stylesheet" media="screen"/>
     <style th:remove="all">
         .jumbotron {
             background: url('../static/images/SpringCoreJumbotron.jpg') no-repeat center center;
@@ -133,32 +133,58 @@
 </head>
 <body>
 
-<div class="jumbotron">
+<div class="jumbotron" th:replace="fragments/jumbotron :: jumbotron">
     <div class="container">
         <h1>Spring Framework Guru</h1>
-        <p class="lead">Online Courses for Spring Framework</p>
+        <p class="lead" th:text="#{index.courses.tagline}">Online Courses for Spring Framework</p>
     </div>
 </div>
 
 <div class="container">
     <div class="row">
         <div class="col-md-12">
-            <h1>Spring Framework Guru - Course Name</h1>
+            <h1 th:text="${product.courseName}">Spring Framework Guru - Course Name</h1>
         </div>
     </div>
-    <div class="row">
+    <div class="row course-listing">
         <div class="col-md-6">
-
-            <img
-                    th:src="@{/images/SpringIntroThumb.png}"
-                    src="https://d2vvqscadf4c1f.cloudfront.net/scgeIJ9wRGGNWvK0jAld_ThumbFREE_01.png"
-                    class="center-block">
-
+            <div class="row">
+                <div class="col-md-12">
+                    <img
+                            th:src="@{'/images/' + ${product.imageUrl}}"
+                            src="https://d2vvqscadf4c1f.cloudfront.net/scgeIJ9wRGGNWvK0jAld_ThumbFREE_01.png"
+                            class="center-block">
+                </div>
+            </div>
+            <div class="row course-listing-extra-info col-xs-12">
+                <div class="col-xs-8">
+                    <img align="left" alt="John Thompson"
+                         src="../static/images/instructor_jt.jpg"
+                         th:src="@{'/images/'+${product.author.image}}"
+                         class="img-circle"/>
+                    <div class="small course-author-name"
+                         th:text="${(product.author.firstName) + ' ' + (product.author.lastName)}">
+                        Author Name
+                    </div>
+                </div>
+                <div class="col-xs-4">
+                    <div class="small course-price" th:text="${product.price > 0 ? '$' + product.price : 'FREE'}">
+                        $PRICE
+                    </div>
+                </div>
+            </div>
+            <div class="row col-xs-12">
+                <ol class="breadcrumb">
+                    <li th:each="category : ${product.productCategories}"><a href="" th:text="${category.category}">Cat 1</a></li>
+                    <li th:remove="all"><a href="">Cat 2</a></li>
+                    <li th:remove="all"><a href="">Cat 3</a></li>
+                </ol>
+            </div>
         </div>
         <div class="col-md-6">
             <div>
-                <h2>Course Title</h2>
-                <p>Adipiscing magna vestibulum fringilla tristique ad a primis ante mi inceptos condimentum curabitur
+                <h2 th:text="${product.courseSubtitle}">Course Title.</h2>
+                <p th:text="${product.courseDescription}">Adipiscing magna vestibulum fringilla tristique ad a primis ante mi inceptos condimentum curabitur
                     curabitur eu sed nullam ridiculus nunc montes id nostra dui inceptos scelerisque posuere ipsum mus.
                     A scelerisque libero viverra eu condimentum mollis suscipit mi consectetur semper dis ipsum nisi
                     in nullam aliquet iaculis in eros euismod bibendum. Adipiscing volutpat fringilla bibendum duis a
@@ -173,10 +199,11 @@
 
     <div class="row">
         <div class="col-md-offset-6 col-md-4">
-            <button class="btn-success">Buy Now!</button>
+            <button class="btn-success" th:text="#{button.buy.now}">Buy Now!</button>
         </div>
     </div>
 </div>
 
+<div th:replace="fragments/footer :: footer">footer</div>
 </body>
 </html>
